Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-118075

macdeployqt does not sign any libraries when the -exectuable parameter is used

XMLWordPrintable

    • macOS
    • 1eddd7add (dev), 886344405 (6.6)

      macdeployqt does not sign any libraries when the -exectuable parameter is used.

      Example:

      /opt/strawberry_macos_arm64_release/bin/macdeployqt strawberry.app -verbose=3 -executable=strawberry.app/Contents/PlugIns/strawberry-tagreader -executable=strawberry.app/Contents/PlugIns/gst-plugin-scanner -codesign=ID
      

      If I remove "-executable" parameters, the process succeeds.

      I first posted on the mailing-list: https://lists.qt-project.org/pipermail/interest/2023-September/039288.html

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            sorvig Morten Sørvig
            jonaski Jonas Kvinge
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes