macdeployqt: Fix codesigning with @loader_path

When the -executable parameter is specified, macdeployqt uses
@loader_path instead of @rpath. This case was not handled in
getBinaryDependencies() used for the code signing.

Fixes: QTBUG-118075
Change-Id: Ie1e0d0781305e1849df9ec0d5fb1c3ce6713a62b
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit 1eddd7add027d05cec2470a5209f46809e690478)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>